--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Palindrome Checker</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        
+        <img>
+        <h1>Is it a palindrome?</h1>
+        <div>
+            <p>Enter in text to check for a palindrome:</p>
+            <div class="palin-container">
+                <input id="text-input" type="text">
+                <button id="check-btn">Check</button>
+            </div>
+        </div>
+        <div id="tooltip">
+            <p>&#128161;</p>
+            <p>A palindrome is a word or sentence that's spelled the same way both forward and backward, ignoring punctuation, case, and spacing.</p>
+        </div>
+            <script src="script.js"></script>
     </body>
 </html>
