Completed functionality in HTML and JS, CSS needs to be added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <button id="check-btn">Check</button>
             </div>
         </div>
+        <p id="result"></p>
         <div id="tooltip">
             <p>&#128161;</p>
             <p>A palindrome is a word or sentence that's spelled the same way both forward and backward, ignoring punctuation, case, and spacing.</p>
