--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     </head>
     <body>
         <img>
-        <h1>Is it a palindrome?</h1>
-        <div>
+        <h1>Is it a Palindrome?</h1>
+        <div class="main">
             <p>Enter in text to check for a palindrome:</p>
             <div class="palin-container">
                 <input id="text-input" type="text">
                 <button id="check-btn">Check</button>
+                <p id="result"></p>
             </div>
         </div>
-        <p id="result"></p>
         <div id="tooltip">
-            <p>&#128161;</p>
+            <p class="lightbulb">&#128161;</p>
             <p>A palindrome is a word or sentence that's spelled the same way both forward and backward, ignoring punctuation, case, and spacing.</p>
         </div>
             <script src="script.js"></script>
